--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "baseHref": "/fyle_assignment/src/index.html",
+            "baseHref": "/fyle_assignment/",
             "outputPath": "dist/fyle_assignment",
             "index": "src/index.html",
             "browser": "src/main.ts",
